--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -30,9 +30,9 @@
 				<!-- id=nav-List -->
 				<div class="collapse navbar-collapse" id="nav-List">
 					<ul id="nav-List-1" class="nav navbar-nav  navbar-right visible-xs">
-						<li class="item"><a href="#">Chicken</li>
-						<li class="item"><a href="#">Beef</li>
-						<li class="item"><a href="#">Sushi</li>
+						<li class="item text-center"><a href="#">Chicken</li>
+						<li class="item text-center"><a href="#">Beef</li>
+						<li class="item text-center"><a href="#">Sushi</li>
 					</ul>
 				</div>
 			</div>
